--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ markdown: rdiscount
 # so be sure to set them if your theme uses them.
 #
 title : Rodrigo Vidal
-tagline: Programação Funcional
+tagline: Theoretical Programmer
 author :
   name : Rodrigo Vidal
   email : rodrigovidal777@gmail.com
